Loaded packages and started Problem 1 by loading data and running a summary command to understand the dataset.

--- a/p8105_hw1_els2250.Rmd
+++ b/p8105_hw1_els2250.Rmd
@@ -5,3 +5,24 @@ date: 24 September 2022
 output: github_document
 ---
 
+## Problem 1
+First, we need to load the packages that we will be using for this homework assignment.
+
+```{r}
+library(tidyverse)
+library(palmerpenguins)
+```
+
+##### Code for Dataset Summary: 
+Next, we need to load the data and briefly view the data to understand important variables and values. 
+
+```{r}
+data("penguins", package = "palmerpenguins")
+
+summary(penguins)
+
+head(penguins)
+
+mean(penguins$flipper_length_mm, na.rm = TRUE)
+```
+
