Created data frame for Problem 2

--- a/p8105_hw1_els2250.md
+++ b/p8105_hw1_els2250.md
@@ -106,3 +106,20 @@ ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)
 ``` r
 ggsave("flipper_length_vs_bill_length.pdf", w = 6, h = 4)
 ```
+
+## Problem 2
+
+##### Create a New Data Frame:
+
+For Problem 2, we are creating a new data frame consisting of a numeric,
+logical, character, and factor vector using `tibble`.
+
+``` r
+problem_2_df <- 
+  tibble(
+    numeric_vector = rnorm(10),
+    logic_vector = numeric_vector > 0,
+    character_vector = c("Washington", "Massachusetts", "New York", "Oregon", "California", "Maine", "Vermont", "New Hampshire", "Idaho", "Colorado"),
+    factor_vector = factor(c("hot", "warm", "cold", "hot", "warm", "cold", "hot", "warm", "cold", "cold"))
+  )
+```
