Took means of Problem 2 data frame

--- a/p8105_hw1_els2250.md
+++ b/p8105_hw1_els2250.md
@@ -92,6 +92,8 @@ Variable Summary:
 -   *Sex*: Female, Male
 -   *Year*: 2007, 2008, 2009
 
+As noted above, the mean flipper length is 200.9152047 mm.
+
 ##### Plot for `penguin` Dataset (& Save):
 
 Next, we will create a plot of penguin flipper length vs. bill length
@@ -123,3 +125,42 @@ problem_2_df <-
     factor_vector = factor(c("hot", "warm", "cold", "hot", "warm", "cold", "hot", "warm", "cold", "cold"))
   )
 ```
+
+##### Taking the Mean of Data Frame Variables:
+
+Next, we will attempt to take the mean of each variable to observe what
+works and what does not work.
+
+``` r
+mean(pull(.data = problem_2_df, var = numeric_vector))
+```
+
+    ## [1] -0.004358262
+
+``` r
+mean(pull(.data = problem_2_df, var = logic_vector))
+```
+
+    ## [1] 0.5
+
+``` r
+mean(pull(.data = problem_2_df, var = character_vector))
+```
+
+    ## Warning in mean.default(pull(.data = problem_2_df, var = character_vector)):
+    ## argument is not numeric or logical: returning NA
+
+    ## [1] NA
+
+``` r
+mean(pull(.data = problem_2_df, var = factor_vector))
+```
+
+    ## Warning in mean.default(pull(.data = problem_2_df, var = factor_vector)):
+    ## argument is not numeric or logical: returning NA
+
+    ## [1] NA
+
+We are able to successfully generate the mean of the numeric and logic
+vectors; however, the character and factor vectors produced `NA` as the
+output.
