--- a/p8105_hw1_els2250.Rmd
+++ b/p8105_hw1_els2250.Rmd
@@ -40,6 +40,8 @@ Variable Summary:
 * *Sex*: Female, Male
 * *Year*: 2007, 2008, 2009
 
+As noted above, the mean flipper length is `r mean(penguins$flipper_length_mm, na.rm = TRUE)` mm.
+
 ##### Plot for `penguin` Dataset (& Save):
 Next, we will create a plot of penguin flipper length vs. bill length using `ggplot` and save the plot as a PDF file. 
 ```{r}
@@ -61,4 +63,15 @@ problem_2_df <-
     factor_vector = factor(c("hot", "warm", "cold", "hot", "warm", "cold", "hot", "warm", "cold", "cold"))
   )
 ```
+
+##### Taking the Mean of Data Frame Variables:
+Next, we will attempt to take the mean of each variable to observe what works and what does not work. 
+```{r}
+mean(pull(.data = problem_2_df, var = numeric_vector))
+mean(pull(.data = problem_2_df, var = logic_vector))
+mean(pull(.data = problem_2_df, var = character_vector))
+mean(pull(.data = problem_2_df, var = factor_vector))
+```
+
+We are able to successfully generate the mean of the numeric and logic vectors; however, the character and factor vectors produced `NA` as the output.
 
