Minor edits to text / explanations to complete homework assignment

--- a/p8105_hw1_els2250.md
+++ b/p8105_hw1_els2250.md
@@ -97,7 +97,7 @@ As noted above, the mean flipper length is 200.9152047 mm.
 ##### Plot for `penguin` Dataset (& Save):
 
 Next, we will create a plot of penguin flipper length vs. bill length
-using `ggplot` and save the plot as a PDF file.
+using `ggplot` and save the plot as a PDF file using `ggsave`.
 
 ``` r
 ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + geom_point(na.rm = TRUE)
@@ -135,13 +135,13 @@ works and what does not work.
 mean(pull(.data = problem_2_df, var = numeric_vector))
 ```
 
-    ## [1] 0.06035696
+    ## [1] 0.1555827
 
 ``` r
 mean(pull(.data = problem_2_df, var = logic_vector))
 ```
 
-    ## [1] 0.5
+    ## [1] 0.6
 
 ``` r
 mean(pull(.data = problem_2_df, var = character_vector))
@@ -168,8 +168,8 @@ output.
 ##### Using `as.numeric` to Convert Variable Types:
 
 To test how R calculates the mean of certain variables, we will attempt
-to convert logical, character, and factor variables to numeric variables
-using `as.numeric`.
+to convert logical, character, and factor variables to numeric using
+`as.numeric`.
 
 ``` r
 as.numeric(problem_2_df$logic_vector)
@@ -185,7 +185,8 @@ for this variable is a decimal between 0 and 1. Since these are
 established values within R, it will do its best to calculate the mean
 for logical variables using these definitions. The `as.numeric` function
 does the same action that base R does when working with logical
-variables: applies 0’s and 1’s to correspond to `FALSE` and `TRUE`.
+variables: applies 0’s and 1’s to correspond to `FALSE` and `TRUE`,
+respectively.
 
 Initially, R was unable to calculate a mean for the `factor_vector`
 variable because the strings ‘hot’, ‘warm’, and ‘cold’ did not hold
